--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <use href="./imges/icons.svg#icon-close-black"></use>
             </svg>
              </button>
-             <h2 class="form-title">Оставьте свои данные, мы вам перезвоним</h2>
+             <p class="form-title">Оставьте свои данные, мы вам перезвоним</p>
             <form class="form">
                 <div class="form-field">
                 <label for="name" class="form-label">Имя</label>
@@ -344,13 +344,13 @@
 
                 <div class="form-field">
                 <label for="comment" class="form-label" >Комментарий</label>
-                <textarea class="form-input" name="comment" id="comment" placeholder="Введите текст" rows="8" ></textarea>
+                <textarea class="form-area" name="comment" id="comment" placeholder="Введите текст"></textarea>
                 </div>
 
                 <input type="checkbox" name="policy" id="policy">
                 <label for="policy">Соглашаюсь с рассылкой и принимаю</label>
                 
-                <button type="submit">Отправить</button>
+                <button type="submit" class="btn-submit">Отправить</button>
             </form>
            
         </div>
