--- a/index.html
+++ b/index.html
@@ -330,16 +330,25 @@
                 <div class="form-field">
                 <label for="name" class="form-label">Имя</label>
                 <input class="form-input" type="text" name="user-name" id="name">
+                <svg class="form-icon" width="18" height="18">
+                    <use href="./imges/icons.svg#icon-person-black"></use>
+                </svg>
                 </div>
                 
                 <div class="form-field">
                 <label for="tel" class="form-label">Телефон</label>
                 <input class="form-input" type="tel" name="tel" id="tel">
+                <svg class="form-icon" width="18" height="18">
+                    <use href="./imges/icons.svg#icon-phone-black"></use>
+                </svg>
                 </div>
 
                 <div class="form-field">
                 <label for="email"class="form-label" >Почта</label>
                 <input class="form-input" type="email" name="email" id="email">
+                <svg class="form-icon" width="18" height="18">
+                    <use href="./imges/icons.svg#icon-email-black"></use>
+                </svg>
                 </div>
 
                 <div class="form-field">
